# aski-rs

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  SELF-HOSTING.md  fix-generated.sh  flake.nix
.cargo/: config.toml
bootstrap/: ast.aski  core.aski  main.aski  parser.aski  token.aski  tokens.aski
examples/: parser.aski  render_test.aski  simple.aski
grammar/: expr.aski  expressions.aski  ffi.aski  field.aski  header.aski  item.aski  items.aski  kernel.aski  operators.aski  param.aski  stmt.aski  test_guard.aski  tokens.aski  type.aski  variant.aski
nix/: roundtrip-test.nix  sema-codegen-test.nix  sema.nix
source/: builtins.aski  codegen.aski  compiler.aski  parser.aski
src/: ast.rs  codec.rs  codegen.rs  codegen_gen.rs  codegen_kernel.rs  codegen_v2.rs  codegen_v3.rs  compiler.rs  context.rs  db.rs  emit.rs  grammar_engine.rs  grammar_engine_full.rs  helpers.rs  ir.rs  kernel_parser.rs  lexer.rs  lib.rs  parser_gen.rs
src/aski_compiler/: mod.rs
src/engine/: aski_world.rs  codegen.rs  compiler.rs  config.rs  deparse.rs  expr.rs  header.rs  items.rs  lower.rs  mod.rs  parse.rs  parse_dialect.rs  parse_expr.rs  parse_item.rs  pattern.rs  raise.rs  sema.rs  sema_tests.rs  sema_world.rs  state.rs  stmt.rs  tokens.rs  types.rs
src/grammar/: bootstrap.rs  builders.rs  config.rs  interpreter.rs  mod.rs
test/: functional_parser.aski  self_mut.aski
tests/: bootstrap_compile.rs  kernel_loop.rs  parser_aski_compile.rs  resolution_rules.rs  rkyv_render.rs  roundtrip.nix  simple_aski_compile.rs
v015_archive/: TERMINOLOGY.md  parse.rs  parse_item.rs
(+33 files in other folders)
