[package]
name = "aski-rs"
version = "0.1.0"
edition = "2021"
description = "aski Rust backend — Kernel Aski parser, codegen, rustc integration"

[dependencies]
logos = "0.14"
blake3 = "1"
rkyv = { version = "0.8", default-features = false, features = [
    "little_endian", "pointer_width_32", "alloc", "bytecheck",
] }

[dev-dependencies]
