[package]
name = "semac"
version = "0.16.0"
edition = "2021"
description = "semac — sema generator: typed parse tree → .sema binary + codegen"

[dependencies]
logos = "0.14"
rkyv = { version = "0.8", default-features = false, features = [
    "little_endian",
    "pointer_width_32",
    "alloc",
] }

[dev-dependencies]
